# chocolate

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.save  Makefile~  README.md  _run_qpc.bat  release
apps/: CMakeLists.txt
apps/game/: CMakeLists.txt
apps/game/client/: CMakeLists.txt  cl_interface.cpp  cl_interface.h  cl_main.cpp  cl_main.h  inputsystem.cpp  inputsystem.h
apps/game/manager/: CMakeLists.txt  main.cpp
apps/game/server/: CMakeLists.txt  sv_interface.cpp  sv_interface.h  sv_main.cpp  sv_main.h
apps/game/shared/: button_inputs.h  game_physics.cpp  game_physics.h  game_rules.cpp  game_rules.h  game_shared.cpp  game_shared.h  main.cpp  main.h  mapmanager.cpp  mapmanager.h  player.cpp  player.h  sidury_shared.cmake  skybox.cpp  skybox.h  sound.cpp  sound.h  steam.cpp  steam.h  testing.cpp  testing.h
apps/launcher/: CMakeLists.txt  launcher_base.cpp  launcher_base.h  launcher_editor.cpp  launcher_render_test.cpp  launcher_sidury.cpp  launcher_toolkit.cpp
apps/render_test/: CMakeLists.txt  main.cpp  render_test.cpp  render_test.h  scene_load.cpp
apps/shared/: map_system.cpp  map_system.h
apps/sidury2/: CMakeLists.txt
apps/sidury2/client/: CMakeLists.txt  cl_interface.cpp  cl_interface.h  cl_main.cpp  cl_main.h  cl_net.cpp  input_system.cpp  input_system.h  main_menu.cpp
apps/sidury2/manager/: CMakeLists.txt  main.cpp
apps/sidury2/server/: CMakeLists.txt  sv_interface.cpp  sv_interface.h  sv_main.cpp  sv_main.h
apps/sidury2/shared/: button_inputs.h  game_interface.h  game_physics.cpp  game_physics.h  game_shared.cpp  game_shared.h  main.cpp  main.h  map_manager.cpp  map_manager.h  sidury_shared.cmake
apps/steam/: CMakeLists.txt  ch_isteam.h  steam.cpp  steam.h
apps/toolkit/: CMakeLists.txt
apps/toolkit/main_window/: CMakeLists.txt  entry.cpp  main.cpp  main.h  ui_asset_list.cpp  ui_resource_usage.cpp  windows.cpp
apps/toolkit/shared/: file_picker.cpp  file_picker.h  itool.h
chocolate/: CMakeLists.txt
chocolate/src/audio/: CMakeLists.txt  audio.cpp  codec_libav.cpp  codec_libav.h  codec_vorbis.h  codec_wav.h
chocolate/src/graphics_data/: CMakeLists.txt  graphics_data.cpp  graphics_data.h  materials.cpp  model_obj.cpp
chocolate/src/imgui/: CMakeLists.txt
scripts/: CMakeLists.txt  bullet.cmake  chocolate.mak  chocolate.qpc  core.cmake  core.qpc  ffmpeg.qpc  joltphysics.cmake  ktx.cmake  tracy.cmake  vulkan.cmake
scripts/base/: core.qpc  msvc.qpc
src/audio/: CMakeLists.txt  audio.cpp  audio.h  audio_sounds.cpp  codec_libav.cpp  codec_libav.h  codec_vorbis.cpp  codec_vorbis.h  codec_wav.cpp  codec_wav.h
src/core/: CMakeLists.txt  app_info.cpp  asserts.cpp  audio.cpp  build_number.cpp  codec_libav.cpp  codec_vorbis.cpp  codec_wav.cpp  commandline.cpp  console.cpp  convar.cpp  engine.cpp  filesystem.cpp  graphics.cpp  gui.cpp  input.cpp  json5.cpp  log.cpp  main.cpp  mempool.cpp  msg.cpp  platform.cpp  platform_linux.cpp  platform_shared.cpp  profiler.cpp  renderer.cpp  resource.cpp  string.cpp  system.cpp  system_loader.cpp  systemmanager.cpp  util.cpp
src/core/renderer/: allocator.cpp  descriptorcache.cpp  device.cpp  device.cpp~  gui_renderer.cpp  layoutbuilder.cpp  material.cpp  materialsystem.cpp  modelloader.cpp  pipelinebuilder.cpp  renderer.cpp  renderer.cpp~  shadercache.cpp  shaders.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.h  input.cpp  input.h  main.cpp
src/graphics/: CMakeLists.txt  allocator.cpp  allocator.h  debug.h  device.cpp  device.h  graphics.cpp  graphics.h  gui.cpp  gui.h  gutil.hh  initializers.h  materialsystem.cpp  materialsystem.h  renderer.cpp  renderer.h
src/graphics/builder/: layoutbuilder.cpp  pipelinebuilder.cpp  pipelinebuilder.h
src/graphics/cache/: descriptorcache.cpp  shadercache.cpp
src/graphics/debugprims/: primcreator.cpp  primcreator.h  vk_prim.cpp  vk_prim.h
src/graphics/gui/: consoleui.cpp  consoleui.h  gui.cpp  gui.h
src/graphics/shaders/: shader_basic_2d.cpp  shader_basic_2d.h  shader_basic_3d.cpp  shader_basic_3d.h  shader_debug.cpp  shader_debug.h  shader_skybox.cpp  shader_skybox.h  shader_unlit.cpp  shader_unlit.h  shader_unlitarray.cpp  shader_unlitarray.h  shaders.cpp  shaders.h
src/graphics2/: CMakeLists.txt  _imgui.frag  _imgui.frag.u32  commandpool.cpp  commandpool.h  config.hh  conversions.cpp  descriptor_set.cpp  descriptormanager.cpp  descriptormanager.h  device.cpp  device.h  freemans_tshirt.hpp  graphics.cpp  graphics.h  gui.cpp  gui.h  gutil.hh  imgui_impl_vulkan.cpp  instance.cpp  instance.h  material.cpp  material.h  materialsystem.cpp  materialsystem.h  present.cpp  present.h  render_pass.cpp  render_vk.cpp  render_vk.h  rendergraph.cpp  rendergraph.h  renderpass.cpp  renderpass.h  rendertarget.cpp  rendertarget.h  shader.cpp  shader.h  shaders.cpp  shadersystem.cpp  (+10 more)
src/graphics_api/: CMakeLists.txt  descriptor_set.cpp  imgui_impl_vulkan.cpp  instance.cpp  present.cpp  render_pass.cpp  render_vk.cpp  render_vk.h  shaders.cpp  swapchain.cpp  texture.cpp  texture_ktx.cpp
src/gui/: CMakeLists.txt  consoleui.cpp  consoleui.h  convar_list.cpp  gui.cpp  gui.h  rmlui.cpp  rmlui.h
src/imgui/: CMakeLists.txt  _imgui.frag  _imgui.frag.u32  imgui.cpp  imgui_draw.cpp  imgui_impl_vulkan.cpp  imgui_version.txt
src/input/: CMakeLists.txt  input.cpp  input.h
src/physics/: CMakeLists.txt  character.cpp  model_obj.cpp  physics.cpp  physics.h  physics_debug.cpp  physics_debug.h  physics_object.cpp  physics_object.h  physics_shape.cpp  physics_shape.h
src/physics_wrapper/: CMakeLists.txt  physics_wrapper.cpp
src/render/: CMakeLists.txt  debug_draw.cpp  debug_draw.h  graphics.cpp  graphics_draw.cpp  graphics_int.h  lighting.cpp  lighting.h  material.cpp  model_gltf.cpp  model_obj.cpp  render_api_old.cpp  shader_system.cpp
src/render3/: CMakeLists.txt  _imgui.frag.u32  backbuffer.cpp  imgui_impl_vulkan.cpp  instance.cpp  interface.cpp  render.cpp  render.h  swapchain.cpp  vk_allocator.cpp  vk_commands.cpp  vk_descriptors.cpp  vk_helpers.cpp  vk_render.cpp  vk_shader.cpp  vk_shader_standard.cpp  vulkan_helpers.cpp
(+337 files in other folders)
